# AutoStream-AI-Agent

./: .gitignore  DEMO_GUIDE.md  README.md
app/: page.tsx
backend/: .env.example  README.md  agent.py  api_client.py  conversation_manager.py  email_service.py  hybrid_llm.py  intent_detector.py  knowledge_base.json  lead_capture.py  main.py  pyproject.toml  rag.py  requirements.txt
